made port configurable and docker image now runs